--- a/LightweightFineTuning.ipynb
+++ b/LightweightFineTuning.ipynb
@@ -463,8 +463,7 @@
     {
       "cell_type": "code",
       "source": [
-        "max_length=2**11\n",
-        "stride=2**6"
+        "max_length=2**11"
       ],
       "metadata": {
         "id": "dEEZJ7lNqsqx"
@@ -481,7 +480,6 @@
         "                                        padding=True,\n",
         "                                        truncation=True,\n",
         "                                        max_length=max_length,\n",
-        "                                        stride=stride,\n",
         "                                        return_attention_mask=False),\n",
         "                    input_columns=\"code\",\n",
         "                    batched=True)"
