--- a/LightweightFineTuning.ipynb
+++ b/LightweightFineTuning.ipynb
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "631be58c",
       "metadata": {
         "colab": {
@@ -137,7 +137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "86a636a5",
       "metadata": {
         "id": "86a636a5"
@@ -149,19 +149,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "210090a3",
       "metadata": {
         "id": "210090a3"
       },
       "outputs": [],
       "source": [
-        "train_size=100_000"
+        "train_size=10_000"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "89f8519e",
       "metadata": {
         "id": "89f8519e"
@@ -173,7 +173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "30c4e8d2",
       "metadata": {
         "id": "30c4e8d2"
@@ -185,7 +185,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "49b7e7a1",
       "metadata": {
         "id": "49b7e7a1"
@@ -197,7 +197,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "f551c63a",
       "metadata": {
         "colab": {
@@ -221,50 +221,50 @@
         }
       ],
       "source": [
-        "ds=load_dataset(\"codeparrot/github-code\", streaming=True, trust_remote_code=True,\n",
+        "iter_ds=load_dataset(\"codeparrot/github-code\", streaming=True, trust_remote_code=True,\n",
         "                split=\"train\").shuffle(seed=seed,\n",
         "                                       buffer_size=train_size+val_size+test_size)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "c0cd7f67",
       "metadata": {
         "id": "c0cd7f67"
       },
       "outputs": [],
       "source": [
-        "train_ds=ds.take(train_size)"
+        "iter_train_ds=iter_ds.take(train_size)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "f28c4a78",
       "metadata": {
         "id": "f28c4a78"
       },
       "outputs": [],
       "source": [
-        "val_ds=ds.skip(train_size).take(val_size)"
+        "iter_val_ds=iter_ds.skip(train_size).take(val_size)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "019b9f55",
       "metadata": {
         "id": "019b9f55"
       },
       "outputs": [],
       "source": [
-        "test_ds=ds.skip(train_size+val_size).take(test_size)"
+        "iter_test_ds=iter_ds.skip(train_size+val_size).take(test_size)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "bd00f667",
       "metadata": {
         "id": "bd00f667"
@@ -276,7 +276,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "f4f5c00d",
       "metadata": {
         "id": "f4f5c00d"
@@ -288,7 +288,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "d9334eb7",
       "metadata": {
         "id": "d9334eb7"
@@ -313,7 +313,7 @@
         "outputId": "2c1bf98a-197f-41c4-fbee-e3e82e6f5d3f"
       },
       "id": "EJfxPKvTy7-7",
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -327,18 +327,124 @@
     {
       "cell_type": "code",
       "source": [
+        "from transformers import PreTrainedTokenizer"
+      ],
+      "metadata": {
+        "id": "Xc2VOsVkNSE0"
+      },
+      "id": "Xc2VOsVkNSE0",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def chunk_and_encode(\n",
+        "        samples: dict[str,  int],\n",
+        "        tokenizer: PreTrainedTokenizer,\n",
+        "        max_len: int,\n",
+        "        stride: int,\n",
+        "        col_name: str) -> dict[str, list[list[int]]]:\n",
+        "    \"\"\"\n",
+        "    Split test in chunks and encode them\n",
+        "    Args:\n",
+        "        samples (dict[str, str]): data raw from hugging face dataset\n",
+        "        tokenizer (PreTrainedTokenizer): hugging face tokenizer\n",
+        "        max_len (int): the length of chunk\n",
+        "        stride (int): the number of overlapping tokens\n",
+        "        col_name (str): the name of the text column\n",
+        "    Return:\n",
+        "        tokenized chunks (dict[str, list[list[int]]])\n",
+        "    \"\"\"\n",
+        "\n",
+        "    chunks = []\n",
+        "    for text in samples[col_name]:\n",
+        "        tokens = tokenizer(text, truncation=False,\n",
+        "                           return_attention_mask=False,\n",
+        "                           padding=False)['input_ids']\n",
+        "\n",
+        "        start_idx = 0\n",
+        "        while start_idx < len(tokens):\n",
+        "            end_idx = min(start_idx + max_len, len(tokens))\n",
+        "            chunk = tokens[start_idx:end_idx]\n",
+        "            chunk += (max_len - len(chunk)) * [0]\n",
+        "            attention_mask = [1] * len(chunk) + (max_len - len(chunk)) * [0]\n",
+        "\n",
+        "            chunks.append({\n",
+        "                'input_ids': chunk,\n",
+        "                'attention_mask': attention_mask\n",
+        "            })\n",
+        "            start_idx += stride\n",
+        "    return {\n",
+        "        'input_ids': [x['input_ids'] for x in chunks],\n",
+        "        'attention_mask': [x['attention_mask'] for x in chunks]\n",
+        "    }"
+      ],
+      "metadata": {
+        "id": "ZJW7CaF7NIrY"
+      },
+      "id": "ZJW7CaF7NIrY",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "max_length=2**11"
+      ],
+      "metadata": {
+        "id": "dEEZJ7lNqsqx"
+      },
+      "id": "dEEZJ7lNqsqx",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from datasets import Dataset"
+      ],
+      "metadata": {
+        "id": "GEu1D2RiP6h4"
+      },
+      "id": "GEu1D2RiP6h4",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "eval_ds=test_ds.map(lambda x: tokenizer(x,\n",
+        "                                        return_tensors=\"pt\",\n",
+        "                                        padding=True,\n",
+        "                                        truncation=True,\n",
+        "                                        max_length=max_length,\n",
+        "                                        return_attention_mask=False),\n",
+        "                    input_columns=\"code\",\n",
+        "                    batched=True)"
+      ],
+      "metadata": {
+        "id": "Z7wi5GmOVDdA"
+      },
+      "id": "Z7wi5GmOVDdA",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import torch"
       ],
       "metadata": {
         "id": "WF_fAFGuX-Je"
       },
       "id": "WF_fAFGuX-Je",
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "532892e1",
       "metadata": {
         "colab": {
@@ -395,7 +501,7 @@
         "outputId": "15754892-dbe9-48e7-be8e-20fd3fafef04"
       },
       "id": "R7aRSd08W5HL",
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -437,10 +543,51 @@
     {
       "cell_type": "code",
       "source": [
-        "def evaluate(model,eval_ds):\n",
+        "from transformers import PreTrainedModel"
+      ],
+      "metadata": {
+        "id": "_uL5umCcO2dv"
+      },
+      "id": "_uL5umCcO2dv",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Perplexity (PPL) is one of the most common metrics for evaluating language models.\n",
+        "\n",
+        "It is defined as the exponentiated average negative log-likelihood of a sequence, calculated with exponent base `e`."
+      ],
+      "metadata": {
+        "id": "oSaFlmQaPfeX"
+      },
+      "id": "oSaFlmQaPfeX"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from tqdm import tqdm"
+      ],
+      "metadata": {
+        "id": "4cRGxlSkSq2K"
+      },
+      "id": "4cRGxlSkSq2K",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def evaluate(model: PreTrainedModel,\n",
+        "             eval_ds: Dataset)->dict[str,float]:\n",
+        "\n",
+        "    \"\"\"\n",
+        "    Compute the perplexity of a model over an evaluation dataset\n",
+        "    \"\"\"\n",
         "    model.eval()\n",
         "    losses = []\n",
-        "    for batch in eval_ds:\n",
+        "    for batch in tqdm(eval_ds):\n",
         "        input_ids=torch.vstack(batch[\"input_ids\"])\n",
         "        with torch.no_grad():\n",
         "            batch_loss = model(input_ids, labels=input_ids).loss.reshape(1,-1)\n",
@@ -448,47 +595,16 @@
         "        losses.append(batch_loss)\n",
         "    loss = torch.mean(torch.cat(losses))\n",
         "    try:\n",
-        "        perplexity = torch.exp(loss)\n",
+        "        perplexity = torch.exp(loss).item()\n",
         "    except OverflowError:\n",
         "        perplexity = float(\"inf\")\n",
-        "    return {\"perplexity\":perplexity.item()}"
+        "    return {\"perplexity\":perplexity}"
       ],
       "metadata": {
         "id": "rupHdanPQ5S_"
       },
       "id": "rupHdanPQ5S_",
-      "execution_count": 18,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "max_length=2**11"
-      ],
-      "metadata": {
-        "id": "dEEZJ7lNqsqx"
-      },
-      "id": "dEEZJ7lNqsqx",
-      "execution_count": 19,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "eval_ds=test_ds.map(lambda x: tokenizer(x,\n",
-        "                                        return_tensors=\"pt\",\n",
-        "                                        padding=True,\n",
-        "                                        truncation=True,\n",
-        "                                        max_length=max_length,\n",
-        "                                        return_attention_mask=False),\n",
-        "                    input_columns=\"code\",\n",
-        "                    batched=True)"
-      ],
-      "metadata": {
-        "id": "Z7wi5GmOVDdA"
-      },
-      "id": "Z7wi5GmOVDdA",
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
