optimize chunk_and_encode

--- a/LightweightFineTuning.ipynb
+++ b/LightweightFineTuning.ipynb
@@ -368,6 +368,18 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "cf4f842a",
+   "metadata": {
+    "id": "WF_fAFGuX-Je"
+   },
+   "outputs": [],
+   "source": [
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "3c8faa9a",
    "metadata": {
     "executionInfo": {
@@ -403,6 +415,7 @@
     "    \"\"\"\n",
     "\n",
     "    chunks = []\n",
+    "    chunks_mask = []\n",
     "    pad_id = tokenizer.pad_token_id\n",
     "\n",
     "    for text in samples[col_name]:\n",
@@ -418,20 +431,19 @@
     "            chunk += (max_len - len_chunk) * [pad_id]\n",
     "            attention_mask = [1] * len_chunk + (max_len - len_chunk) * [0]\n",
     "\n",
-    "            chunks.append({\n",
-    "                'input_ids': chunk,\n",
-    "                'attention_mask': attention_mask\n",
-    "            })\n",
+    "            chunks.append(torch.LongTensor(chunk))\n",
+    "            chunks_mask.append(torch.LongTensor(attention_mask))\n",
+    "           \n",
     "            start_idx += stride\n",
     "    return {\n",
-    "        'input_ids': [x['input_ids'] for x in chunks],\n",
-    "        'attention_mask': [x['attention_mask'] for x in chunks]\n",
+    "        'input_ids': chunks,\n",
+    "        'attention_mask': chunks_mask\n",
     "    }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "8b5b4bcd",
    "metadata": {
     "executionInfo": {
@@ -453,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "44ce57f5",
    "metadata": {
     "executionInfo": {
@@ -475,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "d3804066",
    "metadata": {
     "executionInfo": {
@@ -497,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "6c2703ac",
    "metadata": {
     "executionInfo": {
@@ -519,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "83499b73",
    "metadata": {
     "executionInfo": {
@@ -545,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "51b3474a",
    "metadata": {
     "id": "GEu1D2RiP6h4"
@@ -557,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "bf634de7-84ac-4cfa-a8ad-5270cb96d820",
    "metadata": {},
    "outputs": [],
@@ -569,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "ca5101c6-3da5-40b4-bc35-faa3255b26c4",
    "metadata": {},
    "outputs": [],
@@ -607,7 +619,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "93e64e00d3514f839eb1ccfce9c6df48",
+       "model_id": "f3ac9f7179aa41e3a3f39c91c0dc7c44",
        "version_major": 2,
        "version_minor": 0
       },
@@ -620,7 +632,17 @@
     }
    ],
    "source": [
-    "train_ds=create_dataset(iter_train_ds)"
+    "train_ds=create_dataset(iter_train_ds).shuffle(seed=seed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a83903f-be0b-4e16-b422-91ab56626616",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_ds"
    ]
   },
   {
@@ -641,18 +663,6 @@
    "outputs": [],
    "source": [
     "test_ds=create_dataset(iter_test_ds)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cf4f842a",
-   "metadata": {
-    "id": "WF_fAFGuX-Je"
-   },
-   "outputs": [],
-   "source": [
-    "import torch"
    ]
   },
   {
