add batch size to evaluate

--- a/LightweightFineTuning.ipynb
+++ b/LightweightFineTuning.ipynb
@@ -368,18 +368,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "cf4f842a",
-   "metadata": {
-    "id": "WF_fAFGuX-Je"
-   },
-   "outputs": [],
-   "source": [
-    "import torch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
    "id": "3c8faa9a",
    "metadata": {
     "executionInfo": {
@@ -431,8 +419,8 @@
     "            chunk += (max_len - len_chunk) * [pad_id]\n",
     "            attention_mask = [1] * len_chunk + (max_len - len_chunk) * [0]\n",
     "\n",
-    "            chunks.append(torch.LongTensor(chunk))\n",
-    "            chunks_mask.append(torch.LongTensor(attention_mask))\n",
+    "            chunks.append(chunk)\n",
+    "            chunks_mask.append(attention_mask)\n",
     "           \n",
     "            start_idx += stride\n",
     "    return {\n",
@@ -443,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "8b5b4bcd",
    "metadata": {
     "executionInfo": {
@@ -465,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "44ce57f5",
    "metadata": {
     "executionInfo": {
@@ -487,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "d3804066",
    "metadata": {
     "executionInfo": {
@@ -509,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "6c2703ac",
    "metadata": {
     "executionInfo": {
@@ -531,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "83499b73",
    "metadata": {
     "executionInfo": {
@@ -557,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "51b3474a",
    "metadata": {
     "id": "GEu1D2RiP6h4"
@@ -569,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "bf634de7-84ac-4cfa-a8ad-5270cb96d820",
    "metadata": {},
    "outputs": [],
@@ -581,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "ca5101c6-3da5-40b4-bc35-faa3255b26c4",
    "metadata": {},
    "outputs": [],
@@ -596,7 +584,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
+   "id": "41287f0c-2cdc-45d4-861c-143fe3bc0456",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8f36e2a1957b4f41970772476909d698",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating train split: 0 examples [00:00, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "test_ds=create_dataset(iter_test_ds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "e23b182b",
    "metadata": {
     "colab": {
@@ -619,7 +632,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f3ac9f7179aa41e3a3f39c91c0dc7c44",
+       "model_id": "1467ec5a2f8744f980f9b43110c63096",
        "version_major": 2,
        "version_minor": 0
       },
@@ -637,20 +650,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2a83903f-be0b-4e16-b422-91ab56626616",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_ds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "54644c11-7de4-422c-93f8-9acb6118ec66",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "30f9b2880c044df4a5f81d7e0e675f59",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating train split: 0 examples [00:00, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "val_ds=create_dataset(iter_val_ds)"
    ]
@@ -658,11 +676,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41287f0c-2cdc-45d4-861c-143fe3bc0456",
-   "metadata": {},
+   "id": "cf4f842a",
+   "metadata": {
+    "id": "WF_fAFGuX-Je"
+   },
    "outputs": [],
    "source": [
-    "test_ds=create_dataset(iter_test_ds)"
+    "import torch"
    ]
   },
   {
@@ -765,14 +785,16 @@
    "outputs": [],
    "source": [
     "def evaluate(model: PreTrainedModel,\n",
-    "             eval_ds: Dataset)->dict[str,float]:\n",
+    "             eval_ds: Dataset,\n",
+    "             batch_size: int,\n",
+    "            )->dict[str,float]:\n",
     "\n",
     "    \"\"\"\n",
     "    Compute the perplexity of a model over an evaluation dataset\n",
     "    \"\"\"\n",
     "    model.eval()\n",
     "    losses = []\n",
-    "    for batch in tqdm(eval_ds):\n",
+    "    for batch in tqdm(eval_ds.iter(batch_size)):\n",
     "        input_ids=torch.vstack(batch[\"input_ids\"])\n",
     "        with torch.no_grad():\n",
     "            batch_loss = model(input_ids, labels=input_ids).loss.reshape(1,-1)\n",
@@ -795,7 +817,7 @@
    },
    "outputs": [],
    "source": [
-    "base_score=evaluate(model,eval_ds.iter(8))"
+    "base_score=evaluate(model,eval_ds)"
    ]
   },
   {
