--- a/LightweightFineTuning.ipynb
+++ b/LightweightFineTuning.ipynb
@@ -30,7 +30,7 @@
         "In this cell, describe your choices for each of the following\n",
         "\n",
         "* PEFT technique: QLoRA\n",
-        "* Model: mistralai/Mistral-7B-v0.1\n",
+        "* Model: GPT-2\n",
         "* Evaluation approach: Perplexity\n",
         "* Fine-tuning dataset: codeparrot/github-code"
       ]
@@ -48,7 +48,7 @@
         "outputId": "a2651b9e-9b64-4595-aa04-4914acc72b34"
       },
       "id": "8P8iWpw_6YRb",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,12 +125,12 @@
       "source": [
         "## Loading and Evaluating a Foundation Model\n",
         "\n",
-        "In the cells below, I load the pre-trained Hugging Face model and evaluate its performance prior to fine-tuning. This step includes loading an appropriate tokenizer and dataset."
+        "In the cells below, I will load the pre-trained Hugging Face model and evaluate its performance prior to fine-tuning. This step includes loading an appropriate tokenizer and dataset."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "4598eee2",
       "metadata": {
         "id": "4598eee2"
@@ -142,19 +142,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "b789a0c2",
       "metadata": {
         "id": "b789a0c2"
       },
       "outputs": [],
       "source": [
-        "train_size=2_000"
+        "train_size=1_000"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "ebf52adb",
       "metadata": {
         "id": "ebf52adb"
@@ -166,7 +166,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "b2c55ae4",
       "metadata": {
         "id": "b2c55ae4"
@@ -178,7 +178,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "7687ef06",
       "metadata": {
         "id": "7687ef06"
@@ -189,8 +189,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "I will load the dataset in streaming mode to avoid downloading the entire 1TB."
+      ],
+      "metadata": {
+        "id": "poY-pIVXIGRD"
+      },
+      "id": "poY-pIVXIGRD"
+    },
+    {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "ced74482",
       "metadata": {
         "colab": {
@@ -221,7 +231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "36a5d650",
       "metadata": {
         "id": "36a5d650"
@@ -233,7 +243,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "6eb60851",
       "metadata": {
         "id": "6eb60851"
@@ -245,7 +255,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "dc5c566b",
       "metadata": {
         "id": "dc5c566b"
@@ -257,7 +267,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "dac38f18",
       "metadata": {
         "id": "dac38f18"
@@ -269,7 +279,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "6d14a2f4",
       "metadata": {
         "id": "6d14a2f4"
@@ -281,7 +291,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "5810fba9",
       "metadata": {
         "id": "5810fba9"
@@ -293,7 +303,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "eda3d146",
       "metadata": {
         "colab": {
@@ -319,7 +329,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "91c72362",
       "metadata": {
         "id": "91c72362"
@@ -330,8 +340,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "I will segment the text so that it can be processed by the model within the context length."
+      ],
+      "metadata": {
+        "id": "YiYpL-Q1IJUt"
+      },
+      "id": "YiYpL-Q1IJUt"
+    },
+    {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "3c8faa9a",
       "metadata": {
         "id": "3c8faa9a"
@@ -385,7 +405,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "8b5b4bcd",
       "metadata": {
         "id": "8b5b4bcd"
@@ -397,7 +417,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "44ce57f5",
       "metadata": {
         "id": "44ce57f5"
@@ -409,7 +429,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "d3804066",
       "metadata": {
         "id": "d3804066"
@@ -421,7 +441,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "6c2703ac",
       "metadata": {
         "id": "6c2703ac"
@@ -433,7 +453,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "83499b73",
       "metadata": {
         "id": "83499b73"
@@ -449,7 +469,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "51b3474a",
       "metadata": {
         "id": "51b3474a"
@@ -461,7 +481,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "id": "bf634de7-84ac-4cfa-a8ad-5270cb96d820",
       "metadata": {
         "id": "bf634de7-84ac-4cfa-a8ad-5270cb96d820"
@@ -475,7 +495,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "id": "ca5101c6-3da5-40b4-bc35-faa3255b26c4",
       "metadata": {
         "id": "ca5101c6-3da5-40b4-bc35-faa3255b26c4"
@@ -492,7 +512,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "id": "e23b182b",
       "metadata": {
         "colab": {
@@ -537,7 +557,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "id": "54644c11-7de4-422c-93f8-9acb6118ec66",
       "metadata": {
         "colab": {
@@ -582,7 +602,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "id": "41287f0c-2cdc-45d4-861c-143fe3bc0456",
       "metadata": {
         "colab": {
@@ -634,7 +654,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "id": "cf4f842a",
       "metadata": {
         "id": "cf4f842a"
@@ -645,8 +665,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "I will load the model in NF4, as described in the QLoRA paper. The computation will be performed using Brain Float 16-bit precision."
+      ],
+      "metadata": {
+        "id": "gPRV6SZ2KHYg"
+      },
+      "id": "gPRV6SZ2KHYg"
+    },
+    {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "id": "e61de881",
       "metadata": {
         "id": "e61de881"
@@ -659,7 +689,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "id": "da478f8f",
       "metadata": {
         "colab": {
@@ -724,7 +754,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "id": "a69ce1a7",
       "metadata": {
         "id": "a69ce1a7"
@@ -736,7 +766,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "id": "e2bb3b6e",
       "metadata": {
         "id": "e2bb3b6e"
@@ -748,7 +778,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "id": "e88061ae",
       "metadata": {
         "id": "e88061ae"
@@ -788,12 +818,12 @@
         "id": "ruDRSmN3Ix6f"
       },
       "id": "ruDRSmN3Ix6f",
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "id": "89da212f",
       "metadata": {
         "id": "89da212f",
@@ -817,7 +847,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "id": "b474fe72",
       "metadata": {
         "id": "b474fe72",
@@ -851,12 +881,12 @@
       "source": [
         "## Performing Parameter-Efficient Fine-Tuning\n",
         "\n",
-        "TODO: In the cells below, create a PEFT model from your loaded model, run a training loop, and save the PEFT model weights."
+        "In the cells below, I will create a PEFT model from your loaded model, run a training loop, and save the PEFT model weights."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "id": "b7121748",
       "metadata": {
         "id": "b7121748"
@@ -866,7 +896,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "id": "3e92f8af",
       "metadata": {
         "id": "3e92f8af"
@@ -876,7 +906,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "id": "fb7f6534",
       "metadata": {
         "id": "fb7f6534"
@@ -886,7 +916,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "id": "38c8640c",
       "metadata": {
         "id": "38c8640c"
@@ -896,7 +926,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "id": "949db024",
       "metadata": {
         "id": "949db024"
@@ -918,7 +948,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "id": "031c10e7",
       "metadata": {
         "id": "031c10e7"
@@ -928,7 +958,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "id": "3ebd553d",
       "metadata": {
         "id": "3ebd553d"
@@ -938,7 +968,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "id": "294ff38c",
       "metadata": {
         "id": "294ff38c"
@@ -948,7 +978,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "id": "81dc501b",
       "metadata": {
         "id": "81dc501b"
@@ -958,7 +988,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "id": "a7b326f2",
       "metadata": {
         "id": "a7b326f2"
